--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -11,7 +11,7 @@
             Welcome to Sproutt
         </h1>
         <p class="lead text-muted mb-4">
-            Experience intelligent business management with our comprehensive demo
+            Experience intelligent business management with our demo
         </p>
         <div class="row justify-content-center">
             <div class="col-md-8">
